# chatroom

./: .gitignore  CMakeLists.txt  README.md  chat_engine.cpp  client.cpp  server  server.cpp
console/: chat_engine.h
qt/: CMakeLists.txt  chat_engine.cpp  chat_engine.h  chatroom_qt.pro  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  qt_chat_client.cpp  qt_chat_client.h
